--- a/vue-pro.scss
+++ b/vue-pro.scss
@@ -10,7 +10,7 @@ $color-blockquote: #42b983;
 
 .markdown-body {
   word-break: break-word;
-  line-height: 1.75;
+  line-height: 2;
   font-weight: 400;
   font-size: 15px;
   overflow-x: hidden;
@@ -174,7 +174,10 @@ $color-blockquote: #42b983;
     background-color: #f8f8f8;
     &::after {
       display: block;
-      content: "";
+      content: url('./bulb.svg');
+      width: 25px;
+      height: 25px;
+      left: -16px;
     }
     & > p {
       margin: 10px 0;
