--- a/vue-pro.scss
+++ b/vue-pro.scss
@@ -5,7 +5,7 @@ $line-space: 22px;
 $color-theme: #3eaf7c;
 $color-theme-secondary: rgba(62, 175, 124, 0.8);
 $color-theme-lighter: rgba(62, 175, 124, 0.6);
-$color-theme-lightest: rgba(153, 286, 188, 0.2);
+$color-theme-lightest: rgba(153, 286, 188, 0.1);
 
 $color-blockquote: #42b983;
 
@@ -16,7 +16,7 @@ $color-blockquote: #42b983;
   font-size: 15px;
   overflow-x: hidden;
   color: #333;
-  letter-spacing: 1.3px;
+  letter-spacing: 1.2px;
 
   h1,
   h2,
@@ -114,7 +114,7 @@ $color-blockquote: #42b983;
     overflow: auto;
     position: relative;
     line-height: 1.75;
-    border-radius: 4px;
+    // border-radius: 4px;
     border: 0.5rem solid $color-theme;
     > code {
       font-size: 12px;
@@ -247,9 +247,9 @@ $color-blockquote: #42b983;
 
   ul li {
     list-style: none;
+    padding-left: 10px;
     &::marker {
       content: "•";
-      margin-right: 4px;
       color: $color-theme;
     }
     &.task-list-item::before {
